--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "yarn && node index.js"
   },
   "private": true,
   "dependencies": {
-    "express": "^4.19.2"
+    "@vercel/node": "^3.0.27",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5",
+    "vercel": "^34.1.2"
   }
 }
